[package]
name = "put_it_in_reverse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy-inspector-egui = "0.19"
rand = "0.8.5"
bevy_rapier3d = "0.22.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Add this to your Cargo.toml
[profile.dev.package.bevy_rapier3d]
opt-level = 3